@@ -1,3 +1,6 @@
+2010-12-23  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Script_App.pm: Add FAILURE.
+
 2010-12-21  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Taper/Scribe.pm: Use 'blocksize' to compute the
 	  available space.
